[misc] correcting codecov coverage generation