@@ -21,7 +21,7 @@
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <logback.version>1.3.0-alpha10</logback.version>
-        <jacoco.version>0.8.5</jacoco.version>
+        <jacoco.version>0.8.7</jacoco.version>
         <waffle-jna.version>3.0.0</waffle-jna.version>
         <mysql-connector-java.version>8.0.27</mysql-connector-java.version><!--5.1.49-->
     </properties>
@@ -243,28 +243,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>
-                        --add-reads org.mariadb.jdbc=org.slf4j
-                        --add-reads org.mariadb.jdbc=ch.qos.logback.classic
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.codec=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.resultset=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.integration.tools=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client.result=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.client.tls=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.plugin=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.type=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.pool=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util.constant=ALL-UNNAMED
-                        --add-opens org.mariadb.jdbc/org.mariadb.jdbc.unit.util.log=ALL-UNNAMED
-                        --add-reads org.mariadb.jdbc=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
 
         </plugins>
@@ -350,15 +328,9 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${jacoco.version}</version>
-                        <configuration>
-                            <destFile>${jacoco.reportPath}</destFile>
-                            <append>true</append>
-                            <excludes>
-                                <exclude>META-INF/**</exclude>
-                            </excludes>
-                        </configuration>
                         <executions>
                             <execution>
+                                <id>jacoco-initialize</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
